feat: Added lombok annotations and  refatored to use Builder/Getter